--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,10 @@
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
+
+.idea/
+v2ray-bot
+config/v2ray.share
+geo*
+config/key.go
+tmp/
